core-app-deploy/gitlab/conf/02-gitlab-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-gitlab
  namespace: core-app
  labels:
    app: gitlab
spec:
  serviceName: svc-gitlab
  selector:
    matchLabels:
      app: gitlab
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab-redis
          image: docker.io/library/redis:6.2
          volumeMounts:
            - name: gitlab-redis
              mountPath: /data
        - name: gitlab-server
          image: docker.io/sameersbn/gitlab:15.2.4
          volumeMounts:
            - name: gitlab-data
              mountPath: /home/git/data
          resources:
            requests:
              memory: 4Gi
      volumes:
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: pvc-gitlab-data
        - name: gitlab-redis
          persistentVolumeClaim:
            claimName: pvc-gitlab-redis
